--- a/mulam/adhyatma-ramayanam/RamaHrdayam.tex
+++ b/mulam/adhyatma-ramayanam/RamaHrdayam.tex
@@ -1,4 +1,6 @@
-\chapt{रामहृदये रामचरितम्}
+\chapt{अध्यात्म-रामायणम्}
+
+\sect{रामहृदये रामचरितम्}
 
 \src{अध्यात्म-रामायणम्}{बालकाण्डः}{अध्यायः १}{श्लोकाः ३२--४३}
 \vakta{व्यासः}
