--- a/mulam/kurma-puranam/ikshvaku-vamsha-varnanam.tex
+++ b/mulam/kurma-puranam/ikshvaku-vamsha-varnanam.tex
@@ -1,6 +1,8 @@
-\chapt{इक्ष्वाकु-वंश-वर्णनम्}
+\chapt{कूर्म-पुराणम्}
 
-\src{अग्निपुराणम्}{}{अध्यायः २१}{श्लोकाः १६--}
+\sect{इक्ष्वाकु-वंश-वर्णनम्}
+
+\src{कूर्मपुराणम्}{}{अध्यायः २१}{श्लोकाः १६--}
 \vakta{}
 \shrota{}
 \notes{Brief story of Rama, in the context of Ikshvaku dynasty. Notable is the mention of Rameshvaram temple, and the Shiva linga installed by Rama.}
@@ -260,3 +262,5 @@
 {सर्वपापविनिर्मुक्तो स्वर्गलोके महीयते} %२१.६१
 
 ॥इति श्रीकूर्मपुराणे षट्‌साहस्त्र्यां संहितायां पूर्वविभागे इक्ष्वाकुवंशवर्णनं नाम एकविंशोऽध्यायः॥
+
+\closesection
