--- a/mulam/mahabharatam/HanumadBhimaSamvada.tex
+++ b/mulam/mahabharatam/HanumadBhimaSamvada.tex
@@ -1,4 +1,4 @@
-\chapt{हनूमता रामकथाकथनम्}
+\sect{हनूमता रामकथाकथनम्}
 
 \src{श्रीमन्महाभारतम्}{वन-पर्व}{तीर्थयात्रापर्व}{अध्यायाः १४९--१५०}
 \vakta{हनुमान्}
@@ -10,7 +10,7 @@
 
 \storymeta
 
-\sect{अध्यायः १४९}
+\dnsub{अध्यायः १४९}
 
 \uvacha{हनूमानुवाच}
 
@@ -63,7 +63,7 @@
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि तीर्थयात्रा-पर्वणि एकोनपञ्चाशदधिकशततमोऽध्यायः॥१४९॥
 
 
-\sect{अध्यायः १५०}
+\dnsub{अध्यायः १५०}
 
 \uvacha{हनूमानुवाच}
 
