--- a/mulam/mahabharatam/NaradaSrinjayaSamvada.tex
+++ b/mulam/mahabharatam/NaradaSrinjayaSamvada.tex
@@ -1,4 +1,4 @@
-\chapt{हनूमता रामकथाकथनम्}
+\sect{षोडशराजकीये रामचरितम्}
 
 \src{श्रीमन्महाभारतम्}{द्रोण-पर्व}{अभिमन्युवधपर्व}{अध्यायाः ५९}
 \vakta{नारदः}
@@ -10,13 +10,9 @@
 
 \storymeta
 
-\sect{अध्यायः ५९}
+\dnsub{अध्यायः ५९}
 
-\chapter{अध्यायः ५९}
-\twolineshloka
-{नारद उवाच}
-{}
-
+\uvacha{नारद उवाच}
 
 \threelineshloka
 {रामं दाशरथिं चैव मृतं सृञ्जय शुश्रुम}
