--- a/mulam/mahabharatam/ramopakhyanaparva.tex
+++ b/mulam/mahabharatam/ramopakhyanaparva.tex
@@ -1,4 +1,4 @@
-\chapt{रामोपाख्यान-पर्व}
+\sect{रामोपाख्यान-पर्व}
 
 \src{श्रीमन्महाभारतम्}{वन-पर्व}{श्रीरामोपाख्यानपर्व}{अध्यायाः २७५--२९३}
 \vakta{मार्कण्डेयः}
@@ -8,7 +8,9 @@
 % \textlink{http://stotrasamhita.net/wiki/Narayaniyam/Dashaka_34}
 \translink{}
 
-\sect{अध्यायः २७५}
+\storymeta
+
+\dnsub{अध्यायः २७५}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -104,7 +106,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२७५॥
 
-\sect{अध्यायः २७६}
+\storymeta
+
+\dnsub{अध्यायः २७६}
 \uvacha{मार्कण्डेय उवाच}
 
 
@@ -325,7 +329,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२७६॥
 
-\sect{अध्यायः २७७}
+\storymeta
+
+\dnsub{अध्यायः २७७}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -434,7 +440,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२७७॥
 
-\sect{अध्यायः २७८}
+\storymeta
+
+\dnsub{अध्यायः २७८}
 
 \uvacha{युधिष्ठिर उवाच}
 
@@ -758,7 +766,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२७८॥
 
-\sect{अध्यायः २७९}
+\storymeta
+
+\dnsub{अध्यायः २७९}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -988,7 +998,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२७९॥
 
-\sect{अध्यायः २८०}
+\storymeta
+
+\dnsub{अध्यायः २८०}
 
 \uvacha{गार्कण्डेय उवाच}
 
@@ -1236,7 +1248,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८०॥
 
-\sect{अध्यायः २८१}
+\storymeta
+
+\dnsub{अध्यायः २८१}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -1618,7 +1632,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८१॥
 
-\sect{अध्यायः २८२}
+\storymeta
+
+\dnsub{अध्यायः २८२}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -1777,7 +1793,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८२॥
 
-\sect{अध्यायः २८३}
+\storymeta
+
+\dnsub{अध्यायः २८३}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -2140,7 +2158,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८३॥
 
-\sect{अध्यायः २८४}
+\storymeta
+
+\dnsub{अध्यायः २८४}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -2419,7 +2439,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८४॥
 
-\sect{अध्यायः २८५}
+\storymeta
+
+\dnsub{अध्यायः २८५}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -2631,7 +2653,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८५॥
 
-\sect{अध्यायः २८६}
+\storymeta
+
+\dnsub{अध्यायः २८६}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -2713,7 +2737,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८६॥
 
-\sect{अध्यायः २८७}
+\storymeta
+
+\dnsub{अध्यायः २८७}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -2866,7 +2892,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८७॥
 
-\sect{अध्यायः २८८}
+\storymeta
+
+\dnsub{अध्यायः २८८}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -3023,7 +3051,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८८॥
 
-\sect{अध्यायः २८९}
+\storymeta
+
+\dnsub{अध्यायः २८९}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -3165,7 +3195,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८९॥
 
-\sect{अध्यायः २९०}
+\storymeta
+
+\dnsub{अध्यायः २९०}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -3343,7 +3375,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९०॥
 
-\sect{अध्यायः २९१}
+\storymeta
+
+\dnsub{अध्यायः २९१}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -3518,7 +3552,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९१॥
 
-\sect{अध्यायः २९२}
+\storymeta
+
+\dnsub{अध्यायः २९२}
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -3892,7 +3928,9 @@
 
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९२॥
 
-\sect{अध्यायः २९३}
+\storymeta
+
+\dnsub{अध्यायः २९३}
 
 \uvacha{मार्कण्डेय उवाच}
 
