--- a/mulam/narayaniyam/dashakam-34.tex
+++ b/mulam/narayaniyam/dashakam-34.tex
@@ -1,6 +1,6 @@
-\chapt{श्रीमन्नारायणीयम् --- श्रीरामचरितवर्णनम्}
+\chapt{श्रीमन्नारायणीयम्}
 
-\sect{दशकं ३४}
+\sect{दशकं ३४ --- श्रीरामचरितवर्णनम्}
 
 \src{श्रीमन्नारायणीयम्}{चतुस्त्रिंश-दशकं}{}{श्लोकाः १---10}
 \vakta{शुकः}
