--- a/mulam/ramayana-ratnakara-mulam.tex
+++ b/mulam/ramayana-ratnakara-mulam.tex
@@ -35,6 +35,8 @@
     \input{valmiki-ramayanam/Hanumadupadesha.tex}
     \input{valmiki-ramayanam/HanumadBharataSambhashanam.tex}
     \input{valmiki-ramayanam/GayatriRamayanam.tex}
+    \input{adhyatma-ramayanam/RamaHrdayam.tex}
+    \input{adhyatma-ramayanam/HanumatSitaSamvada.tex}
     \input{bhagavatam/bhagavatam-09-10.tex}
     \input{bhagavatam/bhagavatam-09-11.tex}
     \input{narayaniyam/dashakam-34.tex}
@@ -46,18 +48,20 @@
     \input{devi-bhagavatam/RamacharitaVarnanam.tex}
     \input{devi-bhagavatam/LakshmanaKrtaRamaShokaSantvanam.tex}
     \input{devi-bhagavatam/RamayaDeviVaradanam.tex}
-    \input{adhyatma-ramayanam/RamaHrdayam.tex}
-    \input{adhyatma-ramayanam/HanumatSitaSamvada.tex}
     \input{agni-puranam/ramavatara-varnanam.tex}
     \input{kurma-puranam/ikshvaku-vamsha-varnanam.tex}
-    \input{valmiki-ramayanam/NamaRamayanam.tex}
+    \input{garuda-puranam/ramayana-varnanam.tex}
+    \input{narasimha-puranam/rama-pradurbhava.tex}
+    \input{shiva-puranam/rameshvara-mahatmyam.tex}
+    \input{saura-puranam/ikshvaku-vamsha-nrpa-kathanam.tex}
     \part{रामायणान्तर्गताः कथाः}
     \input{devi-bhagavatam/VedavatiCharitram.tex}
     \part{अनुबन्धाः}
+    \input{valmiki-ramayanam/NamaRamayanam.tex}
     \input{valmiki-ramayanam/RamayanaDhyanam.tex}
     \input{valmiki-ramayanam/RamayanaMangalaShloka.tex}
     \begingroup
-    \let\chapt\sect
+    % \let\chapt\sect
     \input{../../namavali-manjari/100/Rama_108.tex}
     \input{../../namavali-manjari/100/Sita_108.tex}
     \input{../../namavali-manjari/100/Anjaneya_108.tex}
