--- a/mulam/valmiki-ramayanam/HanumadBharataSambhashanam.tex
+++ b/mulam/valmiki-ramayanam/HanumadBharataSambhashanam.tex
@@ -1,4 +1,4 @@
-\chapt{हनूमद्भरतसम्भाषणम्}
+\sect{हनूमद्भरतसम्भाषणम्}
 
 \src{श्रीमद्-वाल्मीकि-रामायणम्}{युद्धकाण्डः}{अध्यायः १२९}{श्लोकाः १---५४}
 \vakta{हनुमान्}
