--- a/mulam/valmiki-ramayanam/Hanumadupadesha.tex
+++ b/mulam/valmiki-ramayanam/Hanumadupadesha.tex
@@ -1,4 +1,4 @@
-\chapt{हनूमदुपदेशः}
+\sect{हनूमदुपदेशः}
 
 \src{श्रीमद्-वाल्मीकि-रामायणम्}{सुन्दरकाण्डः}{अध्यायः ५१}{श्लोकाः १---४६}
 \vakta{हनुमान्}
