--- a/mulam/valmiki-ramayanam/HanumajjanakiSamvada.tex
+++ b/mulam/valmiki-ramayanam/HanumajjanakiSamvada.tex
@@ -1,4 +1,4 @@
-\chapt{हनूमज्जानकीसंवादोपक्रमः}
+\sect{हनूमज्जानकीसंवादोपक्रमः}
 
 \src{श्रीमद्-वाल्मीकि-रामायणम्}{सुन्दरकाण्डः}{अध्यायः १२९}{श्लोकाः १६---३२}
 \vakta{सीता}
