--- a/mulam/valmiki-ramayanam/KavyaSankshepa.tex
+++ b/mulam/valmiki-ramayanam/KavyaSankshepa.tex
@@ -1,4 +1,4 @@
-\chapt{काव्य-सङ्क्षेपः}
+\sect{काव्य-सङ्क्षेपः}
 
 \src{श्रीमद्-वाल्मीकि-रामायणम्}{बालकाण्डः}{अध्यायः ३}{श्लोकाः १---२९}
 % \vakta{वाल्मीकिः}
