--- a/mulam/valmiki-ramayanam/RamavrttaSamshrava.tex
+++ b/mulam/valmiki-ramayanam/RamavrttaSamshrava.tex
@@ -1,4 +1,4 @@
-\chapt{रामवृत्तसंश्रवः}
+\sect{रामवृत्तसंश्रवः}
 
 \src{श्रीमद्-वाल्मीकि-रामायणम्}{सुन्दरकाण्डः}{अध्यायः ३१}{श्लोकाः १---१९}
 \vakta{हनुमान्}
