--- a/mulam/valmiki-ramayanam/SankshepaRamayanam.tex
+++ b/mulam/valmiki-ramayanam/SankshepaRamayanam.tex
@@ -1,4 +1,6 @@
-\chapt{सङ्क्षेपरामायणम् --- नारदवाक्यम्}
+\chapt{वाल्मीकि-रामायणम्}
+
+\sect{सङ्क्षेपरामायणम् --- नारदवाक्यम्}
 
 \src{श्रीमद्-वाल्मीकि-रामायणम्}{बालकाण्डः}{अध्यायः १}{श्लोकाः १---१००}
 \vakta{नारदः}
