--- a/mulam/agni-puranam/ramavatara-varnanam.tex
+++ b/mulam/agni-puranam/ramavatara-varnanam.tex
@@ -1,6 +1,6 @@
-\chapt{श्रीरामावतारवर्णनम्}
+\chapt{अग्नि-पुराणम्}
 
-\src{अग्निपुराणम्}{}{अध्यायः ५}{श्लोकाः १--१४}
+\src{अग्निपुराणम्}{अध्यायः ५}{}{श्लोकाः १--१४}
 \vakta{}
 \shrota{}
 \notes{}
@@ -9,7 +9,7 @@
 
 \storymeta
 
-\sect{पञ्चमोऽध्यायः - बाल-काण्ड-वर्णनम्}
+\sect{पञ्चमोऽध्यायः --- बाल-काण्ड-वर्णनम्}
 
 \uvacha{अग्निरुवाच}
 \twolineshloka
