--- a/mulam/mahabharatam/RamaAvatara.tex
+++ b/mulam/mahabharatam/RamaAvatara.tex
@@ -1,4 +1,6 @@
-\chapt{भीष्मेण रामावतारकथनम्}
+\chapt{महाभारतम्}
+
+\sect{अध्यायः ५० --- भीष्मेण रामावतारकथनम्}
 
 \src{श्रीमन्महाभारतम्}{सभा-पर्व}{अर्घाहरणपर्व}{अध्यायः ५०}
 \vakta{भीष्मः}
@@ -10,7 +12,6 @@
 
 \storymeta
 
-\sect{अध्यायः ५०}
 
 \uvacha{भीष्म उवाच}
 
