--- a/mulam/valmiki-ramayanam/RamayanaDhyanam.tex
+++ b/mulam/valmiki-ramayanam/RamayanaDhyanam.tex
@@ -1,4 +1,4 @@
-\sect{वाल्मीकि-रामायण-ध्यान-श्लोकाः}
+\chapt{वाल्मीकि-रामायण-ध्यान-श्लोकाः}
 
 \twolineshloka*
 {शुक्लाम्बरधरं विष्णुं शशिवर्णं चतुर्भुजम्}
