--- a/mulam/adhyatma-ramayanam/RamaHrdayam.tex
+++ b/mulam/adhyatma-ramayanam/RamaHrdayam.tex
@@ -3,10 +3,10 @@
 \sect{रामहृदये रामचरितम्}
 
 \src{अध्यात्म-रामायणम्}{बालकाण्डः}{अध्यायः १}{श्लोकाः ३२--४३}
-\vakta{व्यासः}
-\shrota{जनमेजयः}
-\notes{}
-\textlink{https://sa.wikisource.org/wiki/देवीभागवतपुराणम्/स्कन्धः_०३/अध्यायः_३०}
+\vakta{सीता}
+\shrota{हनुमान्}
+\notes{In the opening chapter of Adhyatma Ramayana, Sita describes the divine nature of Rama and the various events of His life, which She attributes to Her own divine presence. This chapter is often referred to as ``Ramahṛdayam'' or ``The Heart of Rama.''}
+\textlink{}
 \translink{}
 
 \storymeta
