--- a/mulam/devi-bhagavatam/LakshmanaKrtaRamaShokaSantvanam.tex
+++ b/mulam/devi-bhagavatam/LakshmanaKrtaRamaShokaSantvanam.tex
@@ -111,7 +111,7 @@
 
 \twolineshloka
 {त्यक्त्वा त्वमपि भोगांस्तु मया सह विनिर्गतः}
-{दैवयोगाच्च सौ‌मित्रे भुंक्ष्व दुःखं दुरत्ययम्}% ॥ २५ ॥
+{दैवयोगाच्च सौ‌मित्रे भुङ्क्ष्व दुःखं दुरत्ययम्}% ॥ २५ ॥
 
 \twolineshloka
 {न कोऽप्यस्मत्कुले पूर्वं मत्समो दुःखभाङ्नरः}
