--- a/mulam/devi-bhagavatam/VedavatiCharitram.tex
+++ b/mulam/devi-bhagavatam/VedavatiCharitram.tex
@@ -1,4 +1,4 @@
-\chapt{वेदवती-चरित्रम्}
+\chapt{देवी-भागवतम्}
 
 \src{देवी-भागवतम्}{नवमः स्कन्धः}{अध्यायाः १६}{श्लोकाः १--६४}
 % \vakta{व्यासः}
@@ -84,12 +84,12 @@
 {सा तुष्टा तस्य स्तवनं सुकृतं च चकार ह} %॥ १७ ॥
 
 \twolineshloka
-{सा शशाप मदर्थे त्वं विनंक्ष्यसि सबान्धवः}
+{सा शशाप मदर्थे त्वं विनङ्क्ष्यसि सबान्धवः}
 {स्पृष्टाहं च त्वया कामाद्‌ बलं चाप्यवलोकय} %॥ १८ ॥
 
 \twolineshloka
 {इत्युक्त्वा सा च योगेन देहत्यागं चकार ह}
-{गङ्‌गायां तां च संन्यस्य स्वगृहं रावणो ययौ} %॥ १९ ॥
+{गङ्‌गायां तां च सन्न्यस्य स्वगृहं रावणो ययौ} %॥ १९ ॥
 
 \twolineshloka
 {अहो किमद्‍भुतं दृष्टं किं कृतं वानयाधुना}
@@ -162,7 +162,7 @@
 {सीता तं प्रेरयामास तदर्थे यत्‍नपूर्वकम्} %॥ ३६ ॥
 
 \twolineshloka
-{संन्यस्य लक्ष्मणं रामो जानक्या रक्षणे वने}
+{सन्न्यस्य लक्ष्मणं रामो जानक्या रक्षणे वने}
 {स्वयं जगाम तूर्णं तं विव्याध सायकेन च} %॥ ३७ ॥
 
 \twolineshloka
@@ -235,7 +235,7 @@
 
 \twolineshloka
 {प्रियाः पञ्च कथं तस्या बभूवुर्मुनिपुङ्‌गव}
-{इति मच्चित्तसंदेहं भञ्ज संदेहभञ्जन} %॥ ५४ ॥
+{इति मच्चित्तसन्देहं भञ्ज सन्देहभञ्जन} %॥ ५४ ॥
 
 \uvacha{श्रीनारायण उवाच}
 
