--- a/mulam/frontmatter/preamble-mulam.tex
+++ b/mulam/frontmatter/preamble-mulam.tex
@@ -122,7 +122,7 @@ urlcolor=black					% colour of external links
 \begin{description}
   \item[\faBook]\textbf{\fullSource}
   \ifx\vaktaName\empty \else \item[\faUser\ ~वक्ता ---] \vaktaName\fi
-\hspace{2em}\ifx\shrotaName\empty \else \faUserFriends\ श्रोता --- \shrotaName\fi
+\hspace{2em}\ifx\shrotaName\empty \else \faUserFriends\ \textbf{श्रोता} --- \shrotaName\fi
   % \item[\faCommentDots\ \sffamily\small\footnotesize~Notes:] \textsf{\footnotesize\storyNotes}
   \item[\faCommentDots\sffamily\small\footnotesize]\textsf{\footnotesize\storyNotes}
   % \item[\faTags]\hspace{-0.4ex}\tagList
