--- a/mulam/frontmatter/preface-mulam.tex
+++ b/mulam/frontmatter/preface-mulam.tex
@@ -1,10 +1,14 @@
 % !TeX program = XeLaTeX
 % !TeX root = ./ramayana-sangraha-mulam.tex
-{\font \x="Sanskrit 2003:script=deva" at 12pt\x
+
+\begingroup
+\fontspec[Script=Devanagari]{Adobe Devanagari}
+\fontsize{12pt}{14.4pt}\selectfont
+\centerline{\large{ॐ}}
 \centerline{॥श्री-गणेशाय नमः॥}
 \centerline{॥श्री-गुरुभ्यो नमः॥}
 \centerline{॥श्री-सीता-लक्ष्मण-भरत-शत्रुघ्न-हनुमत्-समेत-श्री-रामचन्द्राय नमः॥}
-}
+
 \thispagestyle{empty}
 
 \begin{center}
@@ -18,11 +22,11 @@
 {एष सेतुर्विधरणो लोकासम्भेदहेतवे}
 {कोदण्डेन च दण्डेन रामेण गुरुणा कृतः}
 
-रामायण-श्रोतॄणां कदापि तृप्तिर्न जायते! यथा भगवान् वाल्मीकिः वदति--- ``रामो रामो राम इति प्रजानामभवन् कथाः'', तद्वत् इतिहासपुराणेष्वपि श्रीरामचन्द्रस्य बह्व्यः कथाः यत्र कुत्रापि लभ्यन्ते। तेषाम् एकत्र प्रस्तुतिं कर्तुम् एषः प्रयासः। सीतादेवी अपि अध्यात्मरामायणे रामस्य अरण्यगमनप्रसङ्गे वदति---
+रामायण-श्रोतॄणां कदापि तृप्तिर्न जायते! यथा महर्षिः वाल्मीकिः वदति--- ``रामो रामो राम इति प्रजानामभवन् कथाः'', तद्वत् इतिहासपुराणेष्वपि श्रीरामचन्द्रस्य बहवः कथाः लभ्यन्ते। तेषाम् एकत्र प्रस्तुतिं कर्तुम् एषः प्रयासः। सीतादेवी अपि अध्यात्मरामायणे रामस्य अरण्यगमनप्रसङ्गे वदति---
 
 \centerline{``रामायणानि बहुशः श्रुतानि बहुभिर्द्विजैः॥२-४-७७॥''} 
 
-अस्मिन् ग्रन्थे अनेकरामकथाः प्रस्तुताः सन्ति। यद्यपि बह्व्यः कथाः श्रीमाद्वाल्मीकिरामायण\-मनुसृत्य एव वर्तन्ते, काश्चित् कथाः तदतिक्रम्य अपि अन्यकल्पेषु ये केचित्विचित्राः कथाप्रसङ्गाः सन्ति तान् अनुगच्छन्ति (यथा पद्मपुराणे श्रीरामचन्द्रः स्वयं महादेवं पृच्छति!)। काश्चित् कथाः श्रीमद्वाल्मीकिरामायणस्य अन्तर्गत-घट्टानां विस्तृतप्रस्तुतिं कुर्वन्ति।
+अस्मिन् ग्रन्थे अनेकरामकथाः प्रस्तुताः सन्ति। यद्यपि बहवः कथाः श्रीमाद्वाल्मीकिरामायण\-मनुसृत्य एव वर्तन्ते, काश्चित् कथाः तदतिक्रम्य अपि अन्यकल्पेषु ये केचित्विचित्राः कथाप्रसङ्गाः सन्ति तान् वर्णयन्ति (यथा पद्मपुराणे श्रीरामचन्द्रः स्वयं महादेवं पृच्छति!)। काश्चित् कथाः श्रीमद्वाल्मीकि\-रामायणस्य अन्तर्गत-घट्टानां विस्तृतप्रस्तुतिं कुर्वन्ति। महाभारतेऽपि भीष्मः हनुमान् (स्वानुजं भीमं प्रति) नारदः च विभिन्नेषु प्रसङ्गेषु रामकथां कथयन्ति। विशेषतः वनपर्वणि मारकण्डेयमहर्षिः रामोपाख्यानपर्वणि रामकथां विस्तरेण वर्णयति।
 
 एतासां कथानां वक्तॄन् व्यासं वाल्मीकिं च नमस्कृत्य एतस्य ग्रन्थस्य पारायणम् आरभामहे। रामे अनन्यभक्तिः सदा भवतु नः। 
 
@@ -52,6 +56,6 @@
 
 
 \centerline{सर्वम् श्री-सीतारामचन्द्रार्पणमस्तु॥}
-
+\endgroup
 \medskip
-\noindent\today \hfill \textsc{Karthik Raman}
+\noindent\today \hfill कार्तिकः रामसूनूः
