--- a/mulam/garuda-puranam/ramayana-varnanam.tex
+++ b/mulam/garuda-puranam/ramayana-varnanam.tex
@@ -166,7 +166,7 @@
 {वेणीरत्नञ्च रामाय रामो लङ्कापुर्री ययौ} %॥१,१४३.३८॥
 
 \twolineshloka
-{ससुग्रीवः स हनुमान्सांगदश्च सलक्ष्मणः}
+{ससुग्रीवः स हनुमान्साङ्गदश्च सलक्ष्मणः}
 {विभीषणोऽपि सम्प्राप्तः शरणं राघवं प्रति} %॥१,१४३.३९॥
 
 \twolineshloka
