--- a/mulam/mahabharatam/NaradaSrinjayaSamvada.tex
+++ b/mulam/mahabharatam/NaradaSrinjayaSamvada.tex
@@ -36,7 +36,7 @@
 
 
 \twolineshloka
-{`रामो हृतां राक्षसेन भार्यां श्रुत्वा जटायुषः}
+{रामो हृतां राक्षसेन भार्यां श्रुत्वा जटायुषः}
 {आतुरः शोकसन्तप्तो रामोऽगच्छद्धरीश्वरम्}
 
 
@@ -47,7 +47,7 @@
 
 \twolineshloka
 {तत्र हत्वा तु पौलस्त्यान्ससुहृद्गणबान्धवान्}
-{मायाविनं महाघोरं रावणं लोककण्टकम्'}
+{मायाविनं महाघोरं रावणं लोककण्टकम्}
 
 
 \twolineshloka
@@ -56,7 +56,7 @@
 
 
 \twolineshloka
-{`हत्वा तत्र रिपुं सङ्ख्ये भार्यया सह सङ्गतः}
+{हत्वा तत्र रिपुं सङ्ख्ये भार्यया सह सङ्गतः}
 {स च लङ्केश्वरं चक्रे धर्मात्मानं विभीषणम्}
 
 
@@ -87,12 +87,12 @@
 
 \twolineshloka
 {अश्वमेधशतैरीजं क्रतुभिर्भूरिदक्षिणैः}
-{यश्च विप्रप्रसादेन सर्वकामानवाप्य च'}
+{यश्च विप्रप्रसादेन सर्वकामानवाप्य च}
 
 
 \twolineshloka
 {सम्प्राप्य विधिवद्राज्यं सर्वभूतानुकम्पनः}
-{`सर्वद्वीपानवष्टभ्य प्रजा धर्मेण पालयन्'}
+{सर्वद्वीपानवष्टभ्य प्रजा धर्मेण पालयन्}
 
 
 \threelineshloka
