--- a/mulam/mahabharatam/ramopakhyanaparva.tex
+++ b/mulam/mahabharatam/ramopakhyanaparva.tex
@@ -4,13 +4,13 @@
 \vakta{मार्कण्डेयः}
 \shrota{युधिष्ठिरः}
 \tags{concise, complete}
-\notes{This chapter recounts the appearance of Lord Rāmacandra in the lineage of Mahārāja Khaṭvāṅga and details His divine exploits, including the slaying of Rāvaṇa and His triumphant return to Ayodhyā.}
+\notes{From this chapter begins the detailed account of Rama, as narrated by by Rishi Markandeya to Yudhishthira in the ``Ramopakhyana parva'', spanning 19 chapters and 750+ shlokas in the Vanaparva of the Mahabharata. It narrates the birth of Rama, his early life, exile, encounters with various beings, and the ultimate victory over Ravana.}
 % \textlink{http://stotrasamhita.net/wiki/Narayaniyam/Dashaka_34}
 \translink{}
 
 \storymeta
 
-\dnsub{अध्यायः २७५}
+\dnsub{अध्यायः २७५}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -108,7 +108,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २७६}
+\dnsub{अध्यायः २७६}\resetShloka
 \uvacha{मार्कण्डेय उवाच}
 
 
@@ -331,7 +331,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २७७}
+\dnsub{अध्यायः २७७}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -442,7 +442,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २७८}
+\dnsub{अध्यायः २७८}\resetShloka
 
 \uvacha{युधिष्ठिर उवाच}
 
@@ -768,7 +768,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २७९}
+\dnsub{अध्यायः २७९}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -1000,7 +1000,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २८०}
+\dnsub{अध्यायः २८०}\resetShloka
 
 \uvacha{गार्कण्डेय उवाच}
 
@@ -1250,7 +1250,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २८१}
+\dnsub{अध्यायः २८१}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -1634,7 +1634,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २८२}
+\dnsub{अध्यायः २८२}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -1795,7 +1795,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २८३}
+\dnsub{अध्यायः २८३}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -2160,7 +2160,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २८४}
+\dnsub{अध्यायः २८४}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -2441,7 +2441,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २८५}
+\dnsub{अध्यायः २८५}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -2655,7 +2655,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २८६}
+\dnsub{अध्यायः २८६}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -2739,7 +2739,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २८७}
+\dnsub{अध्यायः २८७}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -2894,7 +2894,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २८८}
+\dnsub{अध्यायः २८८}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -3053,7 +3053,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २८९}
+\dnsub{अध्यायः २८९}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -3197,7 +3197,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २९०}
+\dnsub{अध्यायः २९०}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -3377,7 +3377,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २९१}
+\dnsub{अध्यायः २९१}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -3554,7 +3554,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २९२}
+\dnsub{अध्यायः २९२}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -3930,7 +3930,7 @@
 
 \storymeta
 
-\dnsub{अध्यायः २९३}
+\dnsub{अध्यायः २९३}\resetShloka
 
 \uvacha{मार्कण्डेय उवाच}
 
@@ -3999,7 +3999,7 @@
 {तस्मात्सर्वं कुरुश्रेष्ठ मा शुचो भरतर्षभ}
 {त्वद्विधा हि महात्मानो न शोचन्ति परन्तप}
 
-\uvacha{वैशपायन उवाच}
+\uvacha{वैशम्पायन उवाच}
 
 
 \twolineshloka
