--- a/mulam/narayaniyam/dashakam-34.tex
+++ b/mulam/narayaniyam/dashakam-34.tex
@@ -6,7 +6,7 @@
 \vakta{शुकः}
 \shrota{परीक्षितः}
 \tags{concise, complete}
-\notes{This chapter recounts the appearance of Lord Rāmacandra in the lineage of Mahārāja Khaṭvāṅga and details His divine exploits, including the slaying of Rāvaṇa and His triumphant return to Ayodhyā.}
+\notes{This chapter describes the events following the birth of Rāma, including His early life in Ayodhyā, the exile of Rāma, Sītā, and Lakṣmaṇa to the forest, their encounters with various Rishis and Rakshasas, and the abduction of Sita.}
 \textlink{http://stotrasamhita.net/wiki/Narayaniyam/Dashaka_34}
 \translink{}
 
