--- a/mulam/narayaniyam/dashakam-35.tex
+++ b/mulam/narayaniyam/dashakam-35.tex
@@ -1,10 +1,10 @@
 \sect{दशकं ३५}
 
-\src{श्रीमन्नारायणीयम्}{पञ्चत्रिंश-दशकं}{}{श्लोकाः १---10}
+\src{श्रीमन्नारायणीयम्}{पञ्चत्रिंश-दशकं}{}{श्लोकाः १--१०}
 \vakta{शुकः}
 \shrota{परीक्षितः}
 \tags{concise, complete}
-\notes{This chapter summarises how Lord Rāmachandra exemplified supreme dharma through performing extensive yajñas, generous gifts to brāhmaṇas, deep love for His subjects, and painful renunciation of Sītādevī , ultimately culminating in His departure to Vaikuntham after establishing His sons in the kingdom.}
+\notes{This chapter summarises the events following the death of Vāli, including the alliance with Sugrīva, the search for Sītā, Setubandhanam, the eventual victory over Rāvaṇa, and the establishment of Rāma's rule in Ayodhyā.}
 \textlink{http://stotrasamhita.net/wiki/Narayaniyam/Dashaka_35}
 \translink{}
 
