--- a/mulam/saura-puranam/ikshvaku-vamsha-nrpa-kathanam.tex
+++ b/mulam/saura-puranam/ikshvaku-vamsha-nrpa-kathanam.tex
@@ -91,7 +91,7 @@
 {अभिषिक्तस्ततो राज्ये रामो राजीवलोचनः} %॥६६॥
 
 \twolineshloka
-{पालयन्पृथिवीं सर्वां धर्मेण मुनिपुंगवाः}
+{पालयन्पृथिवीं सर्वां धर्मेण मुनिपुङ्गवाः}
 {अयजद्देवदेवेशमश्वमेधेन शङ्करम्} %॥६७॥
 
 \twolineshloka
