--- a/mulam/shloka.sty
+++ b/mulam/shloka.sty
@@ -465,3 +465,4 @@
 
 \RequirePackage{bbding}
 \newcommand{\closesection}{\medskip\centerline{\EightFlowerPetal\EightFlowerPetal\EightFlowerPetal}\clearpage}
+\newcommand{\closesub}{\medskip\centerline{\EightFlowerPetal}}
