--- a/mulam/valmiki-ramayanam/KavyaSankshepa.tex
+++ b/mulam/valmiki-ramayanam/KavyaSankshepa.tex
@@ -62,7 +62,7 @@
 {कबन्धदर्शनं चैव पम्पायाश्चापि दर्शनम्} %||1-3-13||
 
 \twolineshloka
-{शर्बर्या दर्शनं चैव हनूमद्दर्शनं तथा}
+{शबर्या दर्शनं चैव हनूमद्दर्शनं तथा}
 {विलापं चैव पम्पायां राघवस्य महात्मनः} %||1-3-14||
 
 \twolineshloka
