--- a/mulam/agni-puranam/ramavatara-varnanam.tex
+++ b/mulam/agni-puranam/ramavatara-varnanam.tex
@@ -418,7 +418,7 @@
 {जग्मू रामं ससुग्रीवमपश्यन्तस्तु जानकीम्}% ।। १० ।।
 
 \twolineshloka
-{रामाङ्गुलीयं संगृह्य हनूमान् वानरैः सह}
+{रामाङ्गुलीयं सङ्गृह्य हनूमान् वानरैः सह}
 {दक्षिणे मागयामास सुप्रभाया गुहान्तिके}% ।। ११ ।।
 
 \twolineshloka
@@ -480,7 +480,7 @@
 
 \twolineshloka
 {रामः सुग्रीवमित्रस्त्वा मार्गयन् प्रैषयच्च माम् }
-{साभिज्ञानञ्चांगुलीयं रामदत्तं गृहाण वै}% ।। ९ ।।
+{साभिज्ञानं चागुलीयं रामदत्तं गृहाण वै}% ।। ९ ।।
 
 \twolineshloka
 {सीताऽङ्गुलीयं जग्रह साऽपश्यन्मारुतिन्तरौ}
