--- a/mulam/bhagavatam/bhagavatam-09-11.tex
+++ b/mulam/bhagavatam/bhagavatam-09-11.tex
@@ -78,7 +78,7 @@
 {स्मरंस्तस्या गुणांस्तांस्तान्नाशक्नोद्रोद्धुमीश्वरः} %16
 
 \twolineshloka
-{स्त्रीपुंप्रसङ्ग एतादृक्सर्वत्र त्रासमावहः}
+{स्त्रीपुम्प्रसङ्ग एतादृक्सर्वत्र त्रासमावहः}
 {अपीश्वराणां किमुत ग्राम्यस्य गृहचेतसः} %17
 
 \twolineshloka
@@ -109,14 +109,14 @@
 {पुरुषो रामचरितं श्रवणैरुपधारयन्}
 {आनृशंस्यपरो राजन्कर्मबन्धैर्विमुच्यते} %23
 
-\dnsub{श्रीराजोवाच}
+\uvacha{श्रीराजोवाच}
 
 
 \twolineshloka
 {कथं स भगवान्रामो भ्रात्न्वा स्वयमात्मनः}
 {तस्मिन्वा तेऽन्ववर्तन्त प्रजाः पौराश्च ईश्वरे} %24
 
-\dnsub{श्रीबादरायणिरुवाच}
+\uvacha{श्रीबादरायणिरुवाच}
 
 
 \twolineshloka
@@ -139,9 +139,11 @@
 {तमुपेयुस्तत्र तत्र पौरा अर्हणपाणयः}
 {आशिषो युयुजुर्देव पाहीमां प्राक्त्वयोद्धृताम्} %29
 
-\twolineshloka
-{ततः प्रजा वीक्ष्य पतिं चिरागतं दिदृक्षयोत्सृष्टगृहाः स्त्रियो नराः}
-{आरुह्य हर्म्याण्यरविन्दलोचनमतृप्तनेत्राः कुसुमैरवाकिरन्} %30
+\fourlineindentedshloka
+{ततः प्रजा वीक्ष्य पतिं चिरागतं}
+{दिदृक्षयोत्सृष्टगृहाः स्त्रियो नराः}
+{आरुह्य हर्म्याण्यरविन्दलोचनम्}
+{अतृप्तनेत्राः कुसुमैरवाकिरन्} %30
 
 \twolineshloka
 {अथ प्रविष्टः स्वगृहं जुष्टं स्वैः पूर्वराजभिः}
