--- a/mulam/devi-bhagavatam/RamayaDeviVaradanam.tex
+++ b/mulam/devi-bhagavatam/RamayaDeviVaradanam.tex
@@ -158,12 +158,12 @@
 {सा विद्या परमा ज्ञेया वेदाद्या वेदकारिणी}% ॥ ३५ ॥
 
 \twolineshloka
-{असंख्यातानि नामानि तस्या ब्रह्मादिभिः किल}
+{असङ्ख्यातानि नामानि तस्या ब्रह्मादिभिः किल}
 {गुणकर्मविधानैस्तु कल्पितानि च किं ब्रुवे}% ॥ ३६ ॥
 
 \twolineshloka
 {अकारादिक्षकारान्तैः स्वरैर्वर्णैस्तु योजितैः}
-{असंख्येयानि नामानि भवन्ति रघुनन्दन}% ॥ ३७ ॥
+{असङ्ख्येयानि नामानि भवन्ति रघुनन्दन}% ॥ ३७ ॥
 
 
 \uvacha{राम उवाच}
