--- a/mulam/shiva-puranam/rameshvara-mahatmyam.tex
+++ b/mulam/shiva-puranam/rameshvara-mahatmyam.tex
@@ -13,7 +13,7 @@
 \uvacha{सूत उवाच}
 
 \twolineshloka
-{अतः परं प्रवक्ष्यामि लिंगं रामेश्वराभिधम्} 
+{अतः परं प्रवक्ष्यामि लिङ्गं रामेश्वराभिधम्} 
 {उत्पन्नं च यथा पूर्वमृषयश्शृणुतादरात्}
 
 \onelineshloka
@@ -21,31 +21,31 @@
 
 \twolineshloka
 {तत्र सीता हृता विप्रा रावणेनोरुमायिना} 
-{प्रापिता स्वगृहं सा हि लंकायां जनकात्मजा} %॥३॥
+{प्रापिता स्वगृहं सा हि लङ्कायां जनकात्मजा} %॥३॥
 
 \twolineshloka
 {अन्वेषणपरस्तस्याः किष्किन्धाख्यां पुरीमगात्} 
-{सुग्रीवहितकृद्भूत्वा वालिनं संजघान ह} %॥४॥
+{सुग्रीवहितकृद्भूत्वा वालिनं सञ्जघान ह} %॥४॥
 
 \twolineshloka
 {तत्र स्थित्वा कियत्कालं तदन्वेषणतत्परः} 
 {सुग्रीवाद्यैर्लक्ष्मणेन विचारं कृतवान्स वै} %॥५॥
 
 \twolineshloka
-{कपीन्संप्रेषयामास चतुर्दिक्षु नृपात्मजः} 
+{कपीन्सम्प्रेषयामास चतुर्दिक्षु नृपात्मजः} 
 {हनुमत्प्रमुखान्रामस्तदन्वेषणहेतवे} %॥६॥
 
 \twolineshloka
-{अथ ज्ञात्वा गतां लंकां सीतां कपिवराननात्} 
+{अथ ज्ञात्वा गतां लङ्कां सीतां कपिवराननात्} 
 {सीताचूडामणिं प्राप्य मुमुदे सोऽति राघवः} %॥७॥
 
 \twolineshloka
 {सकपीशस्तदा रामो लक्ष्मणेन युतो द्विजाः} 
 {सुग्रीवप्रमुखैः पुण्यैर्वानरैर्बलवत्तरैः} %॥८॥
 
-पद्मैरष्टादशाख्यैश्च ययौ तीरं पयोनिधेः ।।
-
-दक्षिणे सागरे यो वै दृश्यते लवणाकरः।।९।।
+\twolineshloka
+{पद्मैरष्टादशाख्यैश्च ययौ तीरं पयोनिधेः}
+{दक्षिणे सागरे यो वै दृश्यते लवणाकरः}
 
 \twolineshloka
 {तत्रागत्य स्वयं रामो वेलायां संस्थितो हि सः} 
@@ -55,75 +55,75 @@
 {हा जानकि कुतो याता कदा चेयं मिलिष्यति} 
 {अगाधस्सागरश्चैवातार्या सेना च वानरी} %॥११॥
 
-राक्षसो गिरिधर्त्ता च महाबलपराक्रमः।।
-
-लंकाख्यो दुर्गमो दुर्ग इंद्रजित्तनयोस्य वै।।१२।।
-
-इत्येवं स विचार्यैव तटे स्थित्वा सलक्ष्मणः।।
-
-आश्वासितो वनौकोभिरंगदादिपुरस्सरैः ।।१३।।
+\twolineshloka
+{राक्षसो गिरिधर्त्ता च महाबलपराक्रमः}
+{लङ्काख्यो दुर्गमो दुर्ग इन्द्रजित्तनयोस्य वै} %॥१२॥
 
 \twolineshloka
-{एतस्मिन्नंतरे तत्र राघवश्शैवसत्तमः}
+{इत्येवं स विचार्यैव तटे स्थित्वा सलक्ष्मणः}
+{आश्वासितो वनौकोभिरङ्गदादिपुरस्सरैः} %॥१३॥
+
+\twolineshloka
+{एतस्मिन्नन्तरे तत्र राघवश्शैवसत्तमः}
 {उवाच भ्रातरं प्रीत्या जलार्थी लक्ष्मणाभिधम्} %॥१४॥
 
 \uvacha{राम उवाच}
 
-भ्रातर्लक्ष्मण वीरेशाहं जलार्थी पिपासितः ।।
-
-तदानय द्रुतं पाथो वानरैः कैश्चिदेव हि ।।१५।।
+\twolineshloka
+{भ्रातर्लक्ष्मण वीरेशाहं जलार्थी पिपासितः}
+{तदानय द्रुतं पाथो वानरैः कैश्चिदेव हि} %॥१५॥
 
 \uvacha{सूत उवाच}
 
 \twolineshloka
-{तच्छ्रुत्वा वानरास्तत्र ह्यधावंत दिशो दश} 
+{तच्छ्रुत्वा वानरास्तत्र ह्यधावन्त दिशो दश} 
 {नीत्वा जलं च ते प्रोचुः प्रणिपत्य पुरः स्थिताः} %॥१६॥
 
-वानरा ऊचुः ।।
+\uvacha{वानरा ऊचुः}
 
-जलं च गृह्यतां स्वामिन्नानीतं तत्त्वदाज्ञया।।
+\twolineshloka
+{जलं च गृह्यतां स्वामिन्नानीतं तत्त्वदाज्ञया}
+{महोत्तमं च सुस्वादु शीतलं प्राणतर्पणम्} %॥१७॥
 
-महोत्तमं च सुस्वादु शीतलं प्राणतर्पणम्।।१७।।
+\uvacha{सूत उवाच}
 
-सूत उवाच।।
-
-सुप्रसन्नतरो भूत्वा कृपादृष्ट्या विलोक्य तान् ।।
-
-तच्छ्रुत्वा रामचन्द्रोऽसौ स्वयं जग्राह तज्जलम्।।१८।।
+\twolineshloka
+{सुप्रसन्नतरो भूत्वा कृपादृष्ट्या विलोक्य तान् }
+{तच्छ्रुत्वा रामचन्द्रोऽसौ स्वयं जग्राह तज्जलम्} %॥१८॥
 
 \twolineshloka
 {स शैवस्तज्जलं नीत्वा पातुमारब्धवान्यदा} 
 {तदा च स्मरणं जातमित्थमस्य शिवेच्छया} %॥१९॥
 
-न कृतं दर्शनं शंभोर्गृह्यते च जलं कथम् ।।
-
-स्वस्वामिनः परेशस्य सर्वानंदप्रदस्य वै । 4.31.२० ।।
-
-इत्युक्त्वा च जलं पीतं तदा रघुवरेण च।।
-
-पश्चाच्च पार्थिवीं पूजां चकार रघुनंदनः।।२१।।
-
-आवाहनादिकांश्चैव ह्युपचारान्प्रकल्प्य वै ।
-
-विधिवत्षोडश प्रीत्या देवमानर्च शङ्करम् ।।२२।।
+\twolineshloka
+{न कृतं दर्शनं शम्भोर्गृह्यते च जलं कथम्}
+{स्वस्वामिनः परेशस्य सर्वानन्दप्रदस्य वै} %॥२०॥
 
 \twolineshloka
-{प्रणिपातैस्स्तवैर्दिव्यैश्शिवं संतोष्य यत्नतः}
-{प्रार्थयामास सद्भक्त्या स रामश्शंकरं मुदा} %॥२३॥
+{इत्युक्त्वा च जलं पीतं तदा रघुवरेण च}
+{पश्चाच्च पार्थिवीं पूजां चकार रघुनन्दनः} %॥२१॥
+
+\twolineshloka
+{आवाहनादिकांश्चैव ह्युपचारान्प्रकल्प्य वै}
+{विधिवत्षोडश प्रीत्या देवमानर्च शङ्करम्} %॥२२॥
+
+\twolineshloka
+{प्रणिपातैस्स्तवैर्दिव्यैश्शिवं सन्तोष्य यत्नतः}
+{प्रार्थयामास सद्भक्त्या स रामश्शङ्करं मुदा} %॥२३॥
 
 \uvacha{राम उवाच}
 
 \twolineshloka
-{स्वामिञ्छंभो महादेव सर्वदा भक्तवत्सल} 
+{स्वामिञ्छम्भो महादेव सर्वदा भक्तवत्सल} 
 {पाहि मां शरणापन्नं त्वद्भक्तं दीनमानसम्} %॥२४॥
 
-एतज्जलमगाधं च वारिधेर्भवतारण ।।
+\twolineshloka
+{एतज्जलमगाधं च वारिधेर्भवतारण}
+{रावणाख्यो महावीरो राक्षसो बलवत्तरः} %॥२५॥
 
-रावणाख्यो महावीरो राक्षसो बलवत्तरः ।।२५।।
-
-वानराणां बलं ह्येतच्चंचलं युद्धसाधनम् ।।
-
-ममकार्यं कथं सिद्धं भविष्यति प्रियाप्तये ।।२६।।
+\twolineshloka
+{वानराणां बलं ह्येतच्चञ्चलं युद्धसाधनम्}
+{ममकार्यं कथं सिद्धं भविष्यति प्रियाप्तये} %॥२६॥
 
 \twolineshloka
 {तस्मिन्देव त्वया कार्यं साहाय्यं मम सुव्रत} 
@@ -140,23 +140,23 @@
 \uvacha{सूत उवाच}
 
 \twolineshloka
-{इत्येवं स च संप्रार्थ्य नमस्कृत्य पुनःपुनः} 
-{तदा जयजयेत्युच्चैरुद्धोषैश्शंकरेति च} %॥4॥
+{इत्येवं स च सम्प्रार्थ्य नमस्कृत्य पुनःपुनः} 
+{तदा जयजयेत्युच्चैरुद्धोषैश्शङ्करेति च} %॥4॥
 
-इति स्तुत्वा शिवं तत्र मंत्रध्यानपरायणः ।।
-
-पुनः पूजां ततः कृत्वा स्वाम्यग्रे स ननर्त ह ।।३१।।
+\twolineshloka
+{इति स्तुत्वा शिवं तत्र मन्त्रध्यानपरायणः}
+{पुनः पूजां ततः कृत्वा स्वाम्यग्रे स ननर्त ह} %॥३१॥
 
 \twolineshloka
 {प्रेमी विक्लिन्नहृदयो गल्लनादं यदाकरोत्} 
-{तदा च शंकरो देवस्सुप्रसन्नो बभूव ह} %॥३२॥
-
-सांगस्सपरिवारश्च ज्योतीरूपो महेश्वरः ।।
-
-यथोक्तरूपममलं कृत्वाविरभवद्द्रुतम्।। ३३।।
+{तदा च शङ्करो देवस्सुप्रसन्नो बभूव ह} %॥३२॥
 
 \twolineshloka
-{ततस्संतुष्टहृदयो रामभक्त्या महेश्वरः} 
+{साङ्गस्सपरिवारश्च ज्योतीरूपो महेश्वरः}
+{यथोक्तरूपममलं कृत्वाविरभवद्द्रुतम्} %॥३३॥
+
+\twolineshloka
+{ततस्सन्तुष्टहृदयो रामभक्त्या महेश्वरः} 
 {शिवमस्तु वरं ब्रूहि रामेति स तदाब्रवीत्} %॥३४॥
 
 \twolineshloka
@@ -173,38 +173,38 @@
 
 \twolineshloka
 {शिवदत्तं जयं प्राप्य ह्यनुज्ञां समवाप्य च} 
-{पुनश्च प्रार्थयामास सांजलिर्नतमस्तकः} %॥३८॥
+{पुनश्च प्रार्थयामास साञ्जलिर्नतमस्तकः} %॥३८॥
 
 \uvacha{राम उवाच}
 
 \twolineshloka
 {त्वया स्थेयमिह स्वामिंल्लोकानां पावनाय च} 
-{परेषामुपकारार्थं यदि तुष्टोऽसि शंकर} %॥३९॥
+{परेषामुपकारार्थं यदि तुष्टोऽसि शङ्कर} %॥३९॥
 
 \uvacha{सूत उवाच}
 
 \twolineshloka
-{इत्युक्तस्तु शिवस्तत्र लिंगरूपोऽभवत्तदा} 
+{इत्युक्तस्तु शिवस्तत्र लिङ्गरूपोऽभवत्तदा} 
 {रामेश्वरश्च नाम्ना वै प्रसिद्धो जगतीतले} %॥४०॥
 
 \twolineshloka
-{रामस्तु तत्प्रभावाद्वै सिन्धुमुत्तीर्य चांजसा}
-{रावणादीन्निहत्याशु राक्षसान्प्राप तां प्रियाम्} %।।४१।।
+{रामस्तु तत्प्रभावाद्वै सिन्धुमुत्तीर्य चाञ्जसा}
+{रावणादीन्निहत्याशु राक्षसान्प्राप तां प्रियाम्} %॥४१॥
 
 \twolineshloka
 {रामेश्वरस्य महिमाद्भुतोऽभूद्भुवि चातुलः} 
 {भुक्तिमुक्तिप्रदश्चैव सर्वदा भक्तकामदः} %॥४२॥
 
 \twolineshloka
-{दिव्यगंगाजलेनैव स्नापयिष्यति यश्शिवम्} 
+{दिव्यगङ्गाजलेनैव स्नापयिष्यति यश्शिवम्} 
 {रामेश्वरं च सद्भक्त्या स जीवन्मुक्त एव हि} %॥४३॥
 
 \twolineshloka
 {इह भुक्त्वाखिलान्भोगान्देवानां दुर्लभानपि} 
-{अंते प्राप्य परं ज्ञानं कैवल्यं प्राप्नुयाद्ध्रुवम्} %॥४४॥
+{अन्ते प्राप्य परं ज्ञानं कैवल्यं प्राप्नुयाद्ध्रुवम्} %॥४४॥
 
 \twolineshloka
 {इति वश्च समाख्यातं ज्योतिर्लिगं शिवस्य तु}
-{रामेश्वराभिधं दिव्यं शृण्वतां पापहारकम्} %।।४५।
+{रामेश्वराभिधं दिव्यं शृण्वतां पापहारकम्} %॥४५।
 
-॥इति श्रीशिवमहापुराणे चतुर्थ्यां कोटिरुद्रसंतायां रामेश्वरमाहात्म्यवर्णनं नामैकत्रिंशोऽध्यायः॥
+॥इति श्रीशिवमहापुराणे चतुर्थ्यां कोटिरुद्रसन्तायां रामेश्वरमाहात्म्यवर्णनं नामैकत्रिंशोऽध्यायः॥
