--- a/mulam/vishnu-puranam/vishnu-puranam-ramayanam.tex
+++ b/mulam/vishnu-puranam/vishnu-puranam-ramayanam.tex
@@ -16,7 +16,7 @@
 
 तस्मादसमञ्जसादंशुमान्नाम कुमारो जज्ञे॥७॥
 
-स त्वससंजसो बालो बाल्यादेवासद्वृत्तोभूत्॥८॥
+स त्वससञ्जसो बालो बाल्यादेवासद्वृत्तोभूत्॥८॥
 
 पिता चास्याचिन्तयदयमतीतबाल्यः सुबुद्धिमान् भविष्यतीति॥९॥
 
@@ -64,13 +64,13 @@
 अथांशुमानपि स्वर्यातानां ब्रह्मदण्डहतानामस्मत्पितॄणामस्वर्गयोग्यानां स्वर्गप्राप्तिकरं
 वरमस्माकं प्रयच्छेति प्रत्याह॥२७॥
 
-तदाकर्ण्य तं च भगवानाह उक्तमेवैतन्मयाद्य पौत्रस्ते त्रिदिवाद्गङ्गांभुवमानयिष्यतीति॥२८॥
+तदाकर्ण्य तं च भगवानाह उक्तमेवैतन्मयाद्य पौत्रस्ते त्रिदिवाद्गङ्गाम्भुवमानयिष्यतीति॥२८॥
 
-तदंभसा च संस्पृष्टेष्वस्थिभस्मासु एते च स्वर्गमारोक्ष्यन्ति॥२९॥
+तदम्भसा च संस्पृष्टेष्वस्थिभस्मासु एते च स्वर्गमारोक्ष्यन्ति॥२९॥
 
 भगवद्विष्णुपादाङ्गुष्ठनिर्गतस्य हि जलस्यैतन्माहात्म्यम्॥३०॥
 
-यन्न केवलमभिसंधिपूर्वकं स्नानाद्युपभोगेषूपकारकमनभिसांधितमप्यस्यां
+यन्न केवलमभिसन्धिपूर्वकं स्नानाद्युपभोगेषूपकारकमनभिसान्धितमप्यस्यां
 प्रेतप्राणस्यास्थिचर्मस्नायुकेशाद्युपस्पृष्टं शरीरजमपि पतितं सद्यः शरीरिणं स्वर्गं नयतीत्युक्तः
 प्रणम्य भवगतेऽश्वमादाय पितामहायज्ञमाजगाम्॥३१॥
 
@@ -80,10 +80,10 @@
 
 तस्यांशुमतो दिलीपः पुत्रोभवत्॥३४॥
 
-दिलीपस्य भगीरथः योऽसौ गङ्गां स्वर्गादिहानीय भगीरथीसंज्ञां चकार॥३५॥
+दिलीपस्य भगीरथः योऽसौ गङ्गां स्वर्गादिहानीय भगीरथीसञ्ज्ञां चकार॥३५॥
 
-भगीरथात्सुहोत्रःसुहोत्राच्छुतः तस्यापि नाभागः ततोंबरीषः तत्पुत्रःसिंधुद्वीपः
-सिंधुद्वीपादयुतायुः॥३६॥
+भगीरथात्सुहोत्रःसुहोत्राच्छुतः तस्यापि नाभागः ततोम्बरीषः तत्पुत्रःसिन्धुद्वीपः
+सिन्धुद्वीपादयुतायुः॥३६॥
 
 तत्पुत्रश्च ऋतुपर्णः योऽसौ नलसहायोक्षहृदयज्ञोभूत्॥३७॥
 
@@ -114,7 +114,7 @@
 स चाप्यचिन्तयदहोस्य राज्ञो दौःशील्यं येनैतन्मांसमस्माकं प्रयच्छति किमेतद्द्रव्यजातमिति
 ध्यानपरोभवत्॥५०॥
 
-अपश्यच्च तन्मांसंमानुषम्॥५१॥
+अपश्यच्च तन्मांसम्मानुषम्॥५१॥
 
 अतः क्रोधकलुषीकृतचेता राजनि सापमुत्ससर्ज॥५२॥
 
@@ -127,17 +127,17 @@
 ॥५५॥
 
 असावपि प्रतिगृह्योदकाञ्जलिं मुनिशापप्रदानायोद्यतो भगवन्नयमस्मद्गुरुर्नार्हस्येनं
-कुलदेवताभूतमाचार्यं शप्तुमिति मदयन्त्या स्वपत्न्या प्रसादितःसस्यांबुदरक्षणार्थं तच्छापांवु
+कुलदेवताभूतमाचार्यं शप्तुमिति मदयन्त्या स्वपत्न्या प्रसादितःसस्याम्बुदरक्षणार्थं तच्छापांवु
 नोर्व्यां न चाकासे चिक्षेप किं तु तेनैव स्वपदौ सिषेच॥५६॥
 
-तेन च क्वोधाश्रितेनां चबुना दग्धच्छायौ तत्पादौ कल्माषतामुपगतौ ततःस कल्माषपादसंज्ञामवाप
+तेन च क्वोधाश्रितेनां चबुना दग्धच्छायौ तत्पादौ कल्माषतामुपगतौ ततःस कल्माषपादसञ्ज्ञामवाप
 ॥५७॥
 
 वसिष्ठशापाच्च षष्ठेषष्ठे काले राक्षसस्वभावमेत्या टव्यां पर्यटन्ननेकशो मानुषानभक्षयत्॥५८॥
 
-एकदा तु कञ्चिन्मुनिमृतुकाले भार्यासंगतं ददर्श॥५९॥
+एकदा तु कञ्चिन्मुनिमृतुकाले भार्यासङ्गतं ददर्श॥५९॥
 
-तयोश्च तमतिभीषणं राक्षसस्वरूपमवलोक्य त्रासाद्दंपत्योः प्रधावितयोर्ब्रह्मणं जग्रह॥६०॥
+तयोश्च तमतिभीषणं राक्षसस्वरूपमवलोक्य त्रासाद्दम्पत्योः प्रधावितयोर्ब्रह्मणं जग्रह॥६०॥
 
 ततःसा ब्रह्मणी बहुशस्तमभियाचितवती॥६१॥
 
@@ -172,7 +172,7 @@
 
 मूलकाद्दशरथस्तस्मादिलिविलस्ततश्च विश्वसहः॥७५॥
 
-तस्माच्च खट्वाङ्गः योसौ देवासुरसंग्रामे देवैरभ्यर्थितोऽसुराञ्जघान॥७६॥
+तस्माच्च खट्वाङ्गः योसौ देवासुरसङ्ग्रामे देवैरभ्यर्थितोऽसुराञ्जघान॥७६॥
 
 स्वर्गे च कृतप्रियैर्देवैर्वरग्रहणाय चोदितः प्राह॥७७॥
 
@@ -192,7 +192,7 @@
 
 येन स्वर्गादिहागम्य मुहूर्तं प्राप्य जीवितम् ।
 
-त्रयोतिसंधिता लोका बुद्ध्या सत्येन चैव हि॥८२॥
+त्रयोतिसन्धिता लोका बुद्ध्या सत्येन चैव हि॥८२॥
 
 खट्वाङ्गाद्दीर्घबाहुः पुत्रोऽभवत्॥८३॥
 
@@ -223,10 +223,10 @@
 
 विराधखरदूषणादीन् कबन्धवालिनौ च निजघान॥९६॥
 
-बद्धा चांभोनिधिमशेषराक्षसकुलक्षयं कृत्वा दशाननापहृतां भार्यं
+बद्धा चाम्भोनिधिमशेषराक्षसकुलक्षयं कृत्वा दशाननापहृतां भार्यं
 तद्वधादपहृतकलङ्कामप्यनलप्रवेशशुद्धामशेषदेवसङ्घैः स्तूयमानशीलां जनकराजकन्यामयोध्यामानिन्ये॥९७॥
 
-ततश्चाभिषेकमङ्गलं मैत्रेय वर्षशतेनापि वक्तुं न शक्यते संक्षेपेण श्रूयताम्॥९८॥
+ततश्चाभिषेकमङ्गलं मैत्रेय वर्षशतेनापि वक्तुं न शक्यते सङ्क्षेपेण श्रूयताम्॥९८॥
 
 लक्ष्मणभरतशत्रुघ्नविभीषणसुग्रीवाङ्गदजाम्बवद्धनुमत्प्रभृतिभिः समुत्फुल्लवदनैश्छत्रचामरादियुतैः
 सेव्यमानो दशरथिर्ब्रह्मेन्द्राग्निजरृतिवरुणवायुकुबेरेशानप्रभृतिभिः
@@ -236,7 +236,7 @@
 समस्तभूभटतां मध्ये सकललोकरक्षार्थं यथोचितमभिषिक्तो दाशरथिः कोसलेन्द्रो रघुकुलतिलको
 जानकीप्रियो भ्रातृत्रयप्रियःसिंहासनगत एकादसाब्दसहस्रं राज्यमकरोत्॥९९॥
 
-भरतोपि गन्धर्वविषयसाधनाय गच्छन् संग्रामे गन्धर्वकोटीस्तिस्त्रो जघान॥१००॥
+भरतोपि गन्धर्वविषयसाधनाय गच्छन् सङ्ग्रामे गन्धर्वकोटीस्तिस्त्रो जघान॥१००॥
 
 शत्रुघ्नेनाप्यमितबलपराक्रमो मधुपुत्रो लवणो नाम राभसो निहातो मथुरा च निवेशिता॥१०१॥
 
@@ -257,14 +257,14 @@
 
 तस्माद्धिरण्यनाभः यो महायोगीस्वराज्जैमिनेः शष्याद्याज्ञवःक्याद्योगमवाय॥१०७॥
 
-हिरण्यनाभस्य पुत्रः पुष्यस्तस्माद्ध्रुवसंधिस्ततःसुदर्शनस्तस्मादग्निवर्मस्ततः शीघ्रगस्तस्मादपि
+हिरण्यनाभस्य पुत्रः पुष्यस्तस्माद्ध्रुवसन्धिस्ततःसुदर्शनस्तस्मादग्निवर्मस्ततः शीघ्रगस्तस्मादपि
 मरुः पुत्रोऽभवत्॥१०८॥
 
 योसौ योगमास्थायाद्यापि कलापग्राममश्रित्य तिष्ठति॥१०९॥
 
 आगामियुगे सूर्यशक्षत्रव्रत आवर्तयिता भविष्यति॥११०॥
 
-तस्यात्मजः प्रशुश्रुकस्तस्यपि सुसंधिस्ततश्चाप्यमर्षस्तस्य च सहस्वांस्ततश्च विश्वभवः॥१११
+तस्यात्मजः प्रशुश्रुकस्तस्यपि सुसन्धिस्ततश्चाप्यमर्षस्तस्य च सहस्वांस्ततश्च विश्वभवः॥१११
 ॥
 
 तस्य बृहद्बलः योर्जुनतनयेनाभिमन्युनाभारतयुद्धे क्षयमनीयत॥११२॥
