--- a/mulam/padma-puranam/chaps.tex
+++ b/mulam/padma-puranam/chaps.tex
@@ -4420,11 +4420,9 @@
 \onelineshloka
 {शरासनविनिर्मुक्त वत्सदन्तैः शिखाशितैः}% ५३
 
-इत्येवमादि विलिलेख महामुनीन्द्रः
-
-श्रीरामचन्द्र भुजवीर्यलसत्प्रतापम्
-
-\twolineshloka
+\fourlineindentedshloka
+{इत्येवमादि विलिलेख महामुनीन्द्रः}
+{श्रीरामचन्द्र भुजवीर्यलसत्प्रतापम्}
 {शोभानिधानमतिचञ्चलवायुवेगं}
 {पातालभूतलविशेषगतिं मुमोच}% ५४
 
@@ -4920,11 +4918,9 @@
 {शिरस्त्राणं निजोत्तंसे कुरु कान्त मनोरमम्}
 {इमेव तंसे विशदे मणिरत्नविभूषिते}% १४
 
-इति सुविमलवाचं वीरपुत्रीं प्रपश्यन्
-
-नयनकमलदृष्ट्या वीक्षमाणस्तन्दङ्गम्
-
-\twolineshloka
+\fourlineindentedshloka
+{इति सुविमलवाचं वीरपुत्रीं प्रपश्यन्}
+{नयनकमलदृष्ट्या वीक्षमाणस्तन्दङ्गम्}
 {अधिगतपरिमोदो भारतिः शत्रुजेता}
 {रणकरणसमर्थस्तां जगादातिधीरः}% १५
 
@@ -5062,11 +5058,9 @@
 {नीपैः कदम्बैर्बकुलैश्चम्पकैर्मदनादिभिः}
 {शोभितं सददर्शाथशत्रुघ्नःपरवीरहा}% ४८
 
-हयोगतस्तद्वनमध्यदेशे
-
-तमालतालादि सुशोभिते वै
-
-\twolineshloka
+\fourlineindentedshloka
+{हयोगतस्तद्वनमध्यदेशे}
+{तमालतालादि सुशोभिते वै}
 {ययौ ततः पृष्ठत एव वीरो}
 {धनुर्धरैः सेवितपादपद्मः}% ४९
 
@@ -5197,11 +5191,9 @@
 {तत्रारभत गानं सा किन्नरस्वरशोभना}
 {मृदङ्गपणवानेकवाद्यभेदविशारदा}% ७९
 
-तद्गानमाकर्ण्य नराधिपोऽसौ
-
-वसन्तमालोक्य मनोहरं च
-
-\twolineshloka
+\fourlineindentedshloka
+{तद्गानमाकर्ण्य नराधिपोऽसौ}
+{वसन्तमालोक्य मनोहरं च}
 {तथान्यपुष्टारटितं मनोरमं}
 {चकार चक्षुः परिवर्तनं बुधः}% ८०
 
@@ -5209,11 +5201,9 @@
 {तं प्रबुद्धं नृपं वीक्ष्य कामः पुष्पायुधस्त्वरन्}
 {चकार सत्वरं सज्यं धनुस्तत्पृष्ठतोऽनघ}% ८१
 
-एकाप्सरास्तत्र नृपस्य पादयोः
-
-संवाहनं नर्तितनेत्रपल्लवा
-
-\twolineshloka
+\fourlineindentedshloka
+{एकाप्सरास्तत्र नृपस्य पादयोः}
+{संवाहनं नर्तितनेत्रपल्लवा}
 {चकार चान्या तु कटाक्षमोक्षणं}
 {चकार काचिद्भृशमङ्गचेष्टितम्}% ८२
 
@@ -5251,51 +5241,39 @@
 {इयं घृताची सुभगा चम्पकाभशरीरभृत्}
 {कर्पूरगन्धललितं भुनक्तु त्वन्मुखामृतम्}% ३
 
-एतां महाभाग सुशोभिविभ्रमां
-
-मनोहराङ्गीं घनपीनसत्कुचाम्
-
-\twolineshloka
+\fourlineindentedshloka
+{एतां महाभाग सुशोभिविभ्रमां}
+{मनोहराङ्गीं घनपीनसत्कुचाम्}
 {कान्तोपभुङ्क्ष्वाशु निजोग्रपुण्यतः}
 {प्राप्तां पुनस्त्वं त्यज दुःखजातम्}% ४
 
-मामप्यनर्घ्याभरणोपशोभितां
-
-मन्दारमालापरिशोभिवक्षसम्
-
-\twolineshloka
+\fourlineindentedshloka
+{मामप्यनर्घ्याभरणोपशोभितां}
+{मन्दारमालापरिशोभिवक्षसम्}
 {नानारताख्यानविचारचञ्चुरां}
 {दृढं यथा स्यात्परिरम्भणं कुरु}% ५
 
-पिबामृतं मामकवक्त्रनिर्गतं
-
-विमानमारुह्य वरं मया सह
-
-\twolineshloka
+\fourlineindentedshloka
+{पिबामृतं मामकवक्त्रनिर्गतं}
+{विमानमारुह्य वरं मया सह}
 {सुमेरुशृङ्गं बहुपुण्यसेवितं}
 {सम्प्राप्य भोगं कुरु सत्तपः फलम्}% ६
 
-तिलोत्तमा यौवनरूपशोभिता
-
-गृह्णातु ते मूर्धनि तापवारणम्
-
-\twolineshloka
+\fourlineindentedshloka
+{तिलोत्तमा यौवनरूपशोभिता}
+{गृह्णातु ते मूर्धनि तापवारणम्}
 {सुचामरौ सन्ततधारयाङ्कितौ}
 {गङ्गाप्रवाहाविव सुन्दरोत्तम}% ७
 
-शृणुष्व भोः कामकथां मनोहरां
-
-पिबामृतं देवगणादिवाञ्छितम्
-
-\twolineshloka
+\fourlineindentedshloka
+{शृणुष्व भोः कामकथां मनोहरां}
+{पिबामृतं देवगणादिवाञ्छितम्}
 {उद्यानमासाद्य च नन्दनाभिधं}
 {वराङ्गनाभिर्विहरं कुरु प्रभो}% ८
 
-इत्युक्तमाकर्ण्य महामतिर्नृपो
-
-विचारयामास कुतो ह्युपस्थिताः
-
-\twolineshloka
+\fourlineindentedshloka
+{इत्युक्तमाकर्ण्य महामतिर्नृपो}
+{विचारयामास कुतो ह्युपस्थिताः}
 {मया सुसृष्टास्तपसा सुराङ्गनाः}
 {प्रत्यूह एवात्र विधेयमेष किम्}% ९
 
@@ -5827,19 +5805,15 @@
 {अथर्षिः स्वाश्रमं गत्वा मानव्या सह भार्यया}
 {मुदं प्राप हताशेष पातको योगयुक्तया}% १
 
-सा मानवी तं वरमात्मनः पतिं
-
-नेत्रेणहीनं जरसा गतौजसम्
-
-\twolineshloka
+\fourlineindentedshloka
+{सा मानवी तं वरमात्मनः पतिं}
+{नेत्रेणहीनं जरसा गतौजसम्}
 {सिषेव एनं हरिमेधसोत्तमं}
 {निजेष्टदात्रीं कुलदेवतां यथा}% २
 
-शूश्रूषती स्वं पतिमिङ्गितज्ञा
-
-महानुभावं तपसां निधिं प्रियम्
-
-\twolineshloka
+\fourlineindentedshloka
+{शूश्रूषती स्वं पतिमिङ्गितज्ञा}
+{महानुभावं तपसां निधिं प्रियम्}
 {परां मुदं प्राप सती मनोहरा}
 {शची यथा शक्रनिषेवणोद्यता}% ३
 
@@ -5915,11 +5889,9 @@
 {कालेन भूयसा क्षामां कर्शितां व्रतचर्यया}
 {प्रेमगद्गदया वाचा पीडितः कृपयाब्रवीत्}% २०
 
-तुष्टोऽहमद्य तव भामिनि मानदायाः
-
-शुश्रूषया परमया हृदि चैकभक्त्या
-
-\twolineshloka
+\fourlineindentedshloka
+{तुष्टोऽहमद्य तव भामिनि मानदायाः}
+{शुश्रूषया परमया हृदि चैकभक्त्या}
 {यो देहिनामयमतीव सुहृत्स्वदेहो}
 {नावेक्षितः समुचितः क्षपितुं मदर्थे}% २१
 
@@ -5939,11 +5911,9 @@
 {सिद्धासि भुङ्क्ष्व विभवान्निजधर्मदोहान्}
 {दिव्यान्नरैर्दुरधिगान्नृपविक्रियाभिः}% २३
 
-एवं ब्रुवाणमबलाखिलयोगमाया
-
-विद्याविचक्षणमवेक्ष्य गताधिरासीत्
-
-\twolineshloka
+\fourlineindentedshloka
+{एवं ब्रुवाणमबलाखिलयोगमाया}
+{विद्याविचक्षणमवेक्ष्य गताधिरासीत्}
 {सम्प्रश्रयप्रणयविह्वलया गिरेषद्}
 {व्रीडाविलोकविलसद्धसिताननाह}% २४
 
@@ -5957,11 +5927,9 @@
 {यस्तेऽभ्यधायि समयः सकृदङ्गसङ्गो}
 {भूयाद्गरीयसि गुणः प्रसवः सतीनाम्}% २५
 
-तत्रेति कृत्यमुपशिक्ष्य यथोपदेशं
-
-येनैष कर्शिततमोति रिरंसयात्मा
-
-\twolineshloka
+\fourlineindentedshloka
+{तत्रेति कृत्यमुपशिक्ष्य यथोपदेशं}
+{येनैष कर्शिततमोति रिरंसयात्मा}
 {सिध्येत ते कृतमनोभव धर्षिताया}
 {दीनस्तदीशभवनं सदृशं विचक्ष्व}% २६
 
@@ -6067,11 +6035,9 @@
 {विद्याधरी सहस्रेण सेव्यमानां सुवाससम्}
 {जातभावो विमानं तदारोहयदमित्रहन्}% ५१
 
-तस्मिन्नलुप्तमहिमा प्रिययानुषक्तो
-
-विद्याधरीभिरुपचीर्णवपुर्विमाने
-
-\twolineshloka
+\fourlineindentedshloka
+{तस्मिन्नलुप्तमहिमा प्रिययानुषक्तो}
+{विद्याधरीभिरुपचीर्णवपुर्विमाने}
 {बभ्राज उत्कचकुमुद्गणवानपीच्य}
 {स्ताराभिरावृत इवोडुपतिर्नभःस्थः}% ५२
 
@@ -6125,11 +6091,9 @@
 {राजा दुहितरं प्राह कृतपादाभिवन्दनाम्}
 {आशिषो न प्रयुञ्जानो नातिप्रीतमना इव}% ८
 
-चिकीर्षितं ते किमिदं पतिस्त्वया
-
-प्रलम्भितो लोकनमस्कृतो मुनिः
-
-\twolineshloka
+\fourlineindentedshloka
+{चिकीर्षितं ते किमिदं पतिस्त्वया}
+{प्रलम्भितो लोकनमस्कृतो मुनिः}
 {त्वया जराग्रस्तमसम्मतं पतिं}
 {विहाय जारं भजसेऽमुमध्वगम्}% ९
 
@@ -6374,11 +6338,9 @@
 {वसुकोशं धनं सर्वं राज्यं तस्मै निवेद्य च}
 {किं करोमीति राजा तं जगाद पुरतः स्थितः}% १२
 
-राजापि तं स्वीयपदे प्रणम्रं
-
-दोर्भ्यां दृढं सम्परिषस्वजे महान्
-
-\twolineshloka
+\fourlineindentedshloka
+{राजापि तं स्वीयपदे प्रणम्रं}
+{दोर्भ्यां दृढं सम्परिषस्वजे महान्}
 {जगाम साकं तनये स्वराज्यं}
 {निक्षिप्य सर्वं बहुधन्विभिर्वृतः}% १३
 
@@ -6638,11 +6600,9 @@
 {वाराणसी मया दृष्टा विश्वनाथकृतालया}
 {यत्रोपदिशते मन्त्रं तारकं ब्रह्मसंज्ञितम्}% ७६
 
-यस्यां मृताः कीटपतङ्गभृङ्गाः
-
-पश्वादयो वा सुरयोनयो वा
-
-\twolineshloka
+\fourlineindentedshloka
+{यस्यां मृताः कीटपतङ्गभृङ्गाः}
+{पश्वादयो वा सुरयोनयो वा}
 {स्वकर्मसम्भोगसुखं विहाय}
 {गच्छन्ति कैलासमतीतदुःखाः}% ७७
 
@@ -7649,11 +7609,9 @@
 {ददर्श स्वप्नमध्ये तु स स्वात्मानं चतुर्भुजम्}
 {शङ्खचक्रगदापद्मशार्ङ्गकोदण्डधारिणम्}% २
 
-नृत्यन्तं पुरुषोत्तमस्य पुरतः शर्वादि देवैः सह
-
-श्रीमद्भिः स्वतनूयुतैररिगदाम्बूत्थाब्जहेत्यादिभिः
-
-\twolineshloka
+\fourlineindentedshloka
+{नृत्यन्तं पुरुषोत्तमस्य पुरतः शर्वादि देवैः सह}
+{श्रीमद्भिः स्वतनूयुतैररिगदाम्बूत्थाब्जहेत्यादिभिः}
 {विष्वक्सेनवरैर्गणैः सुतनुभिः श्रीशंसदोपासितं}
 {दृष्ट्वा विस्मयमाप लोकविषयं हर्षं तथात्यद्भुतम्}% ३
 
@@ -8216,11 +8174,9 @@
 {संहर्षयन्स्वीयगणान्परान्महान्}
 {कुर्वन्हृदा शून्यतमान्गतासुकान्}% ७५
 
-स राजपुत्रः शितसायकव्रजैः
-
-सम्पूर्णमात्मानमवेक्ष्य रोषितः
-
-\twolineshloka
+\fourlineindentedshloka
+{स राजपुत्रः शितसायकव्रजैः}
+{सम्पूर्णमात्मानमवेक्ष्य रोषितः}
 {जग्राह शस्त्राणि दुरन्तविक्रमो}
 {धनुश्च धुन्वन्भुजदण्डयोर्महान्}% ७६
 
@@ -8650,11 +8606,9 @@
 {व्यूहं रचय सङ्ग्रामे क्रौञ्चाख्यं रिपुदुर्जयम्}
 {यमाविश्य जये सैन्यं शत्रुघ्नस्य महीपतेः}% ३१
 
-तद्वाक्यमाकर्ण्य सुबाहुभूपतेः
-
-क्रौञ्चाख्यसद्व्यूहविशेषमादधात्
-
-\twolineshloka
+\fourlineindentedshloka
+{तद्वाक्यमाकर्ण्य सुबाहुभूपतेः}
+{क्रौञ्चाख्यसद्व्यूहविशेषमादधात्}
 {यन्नो विशन्ते सहसा रिपोर्गणा}
 {महाबलाः शस्त्रसमूहधारिणः}% ३२
 
@@ -8806,11 +8760,9 @@
 
 दृश्यन्ते व्यापिनस्तत्र रणमध्ये सुदुर्भराः
 
-तद्बाणजालं तरसा निहत्य
-
-लक्ष्मीनिधिश्चापमथा ततज्यम्
-
-\twolineshloka
+\fourlineindentedshloka
+{तद्बाणजालं तरसा निहत्य}
+{लक्ष्मीनिधिश्चापमथा ततज्यम्}
 {विधाय तस्योरसि बाणषट्कं}
 {मुमोच तीक्ष्णं शितपर्वशोभितम्}% ३१
 
@@ -9190,11 +9142,9 @@
 {कुटिलभ्रूयुगं श्रेष्ठं सन्दष्टाधरपल्लवम्}
 {स चुम्बन्मुखपद्मेन विलपन्निदमब्रवीत्}% ४
 
-हा पुत्र वीर कथमुत्सुकचेतसं मां
-
-किं नेक्षसे विशदनेत्रयुगेन शूर
-
-\twolineshloka
+\fourlineindentedshloka
+{हा पुत्र वीर कथमुत्सुकचेतसं मां}
+{किं नेक्षसे विशदनेत्रयुगेन शूर}
 {किं मद्विनोदकथयारहितस्त्वमेव}
 {रोषोदधिप्लुतमनाः किल लक्ष्यसे च}% ५
 
@@ -11840,11 +11790,9 @@
 {अद्य मे सर्वशास्त्रस्य ज्ञातृत्वं बहुसार्थकम्}
 {येन श्रीराममाज्ञाय प्राप्तोऽयोध्यापुरीमिमाम्}% ३४
 
-इत्येवमादिवचनानि बहूनि हृष्टो
-
-रामाङ्घ्रिदर्शनसुहर्षित गात्रशोभी
-
-\twolineshloka
+\fourlineindentedshloka
+{इत्येवमादिवचनानि बहूनि हृष्टो}
+{रामाङ्घ्रिदर्शनसुहर्षित गात्रशोभी}
 {प्रायाद्रमेश्वरसमीपमगम्यमन्यै-}
 {र्योगेश्वरैरपि विचारपरैः सुदूरम्}% ३५
 
@@ -12198,11 +12146,9 @@
 {तस्या वचः परं श्रुत्वा हनूमान्नि जगाद ताम्}
 {रघुनाथप्रसादेन सर्वमस्माकमूर्जितम्}% ५०
 
-तथापि याचे वरमेकमुत्तमं
-
-विधेहि तन्मे मनसः समीहितम्
-
-\twolineshloka
+\fourlineindentedshloka
+{तथापि याचे वरमेकमुत्तमं}
+{विधेहि तन्मे मनसः समीहितम्}
 {भवे भवे नो रघुनायकः पति -}
 {र्वयं च तत्कर्मकराश्च किङ्कराः}% ५१
 
@@ -12344,11 +12290,9 @@
 {एवं प्रवृत्ते समये राजराजस्य धीमतः}
 {प्रायात्तद्वनदेशं स हयः परमशोभनः}% २१
 
-तं स्वर्णपत्ररचितैकललाटदेशं
-
-गङ्गासमं घुसृणकुङ्कुम पिञ्जराङ्गम्
-
-\twolineshloka
+\fourlineindentedshloka
+{तं स्वर्णपत्ररचितैकललाटदेशं}
+{गङ्गासमं घुसृणकुङ्कुम पिञ्जराङ्गम्}
 {गत्यासमं पवनवेगतिरस्करिण्या}
 {दृष्ट्वा स्त्रियः परमकौतुकधामदेहम्}% २२
 
@@ -12650,11 +12594,9 @@
 
 \uvacha{शेष उवाच}
 
-इति पटहरवं स्वकर्णगोचरं
-
-नरवरवीरवरा ययुर्नृपोत्तमम्
-
-\twolineshloka
+\fourlineindentedshloka
+{इति पटहरवं स्वकर्णगोचरं}
+{नरवरवीरवरा ययुर्नृपोत्तमम्}
 {कनककवचभूषितस्वदेहाः}
 {समरमहोत्सव हृष्टचित्तकोशाः}% ३२
 
@@ -12914,11 +12856,9 @@
 {आह्वयन्तं महासैन्यवारिधौ पुष्कलं नृपम्}
 {समालक्ष्य कपीन्द्रोऽपि हनूमांस्तमधावत}% १
 
-लाङ्गूलमुद्यम्य विशालदेहं
-
-सरावमातत्य पयोदघोषम्
-
-\twolineshloka
+\fourlineindentedshloka
+{लाङ्गूलमुद्यम्य विशालदेहं}
+{सरावमातत्य पयोदघोषम्}
 {रणस्थितान्वीरवरान्कपीन्द्रो}
 {जगाम तं वीरमणिं नृपेन्द्रम्}% २
 
@@ -13934,11 +13874,9 @@
 {तमागतं हनूमन्तं वीक्ष्य सर्वेऽपि वैरिणः}
 {साधुसाधुप्रशंसन्तमद्भुतं मेनिरे कपिम्}% १९
 
-कपिः समागत्य महामुदायुतः
-
-पुरो भटं पुष्कलमागतं मृतम्
-
-\twolineshloka
+\fourlineindentedshloka
+{कपिः समागत्य महामुदायुतः}
+{पुरो भटं पुष्कलमागतं मृतम्}
 {शिवेन संरक्षितमुग्रमण्डले}
 {श्रीरामचित्तं सविधे जगाम ह}% २०
 
@@ -16025,35 +15963,27 @@
 
 \uvacha{हनूमानुवाच}
 
-हा नाथ हा नरवरोत्तम हा दयालो
-
-सीतापते रुचिरकुन्तलशोभिवक्त्र
-
-\twolineshloka
+\fourlineindentedshloka
+{हा नाथ हा नरवरोत्तम हा दयालो}
+{सीतापते रुचिरकुन्तलशोभिवक्त्र}
 {भक्तार्तिदाहक मनोहररूपधारिन्}
 {मां बन्धनात्सपदि मोचय मा विलम्बम्}% १४
 
-सम्मोचितास्तु भवता गजपुङ्गवाद्याः
-
-देवाश्च दानवकुलाग्नि सुदह्यमानाः
-
-\twolineshloka
+\fourlineindentedshloka
+{सम्मोचितास्तु भवता गजपुङ्गवाद्याः}
+{देवाश्च दानवकुलाग्नि सुदह्यमानाः}
 {तत्सुन्दरीशिरसिसंस्थितकेशबन्धः}
 {सम्मोचितस्तु करुणालय मां स्मरस्व}% १५
 
-त्वं यागकर्मनिरतोऽसि मुनीश्वरेन्द्रै
-
-र्धर्मं विचारयसि भूमिपतीड्यपाद
-
-\twolineshloka
+\fourlineindentedshloka
+{त्वं यागकर्मनिरतोऽसि मुनीश्वरेन्द्रै}
+{र्धर्मं विचारयसि भूमिपतीड्यपाद}
 {अत्राहमद्य सुरथेन विगाढपाश -}
 {बद्धोस्मि मोचय महापुरुषाशु देव}% १६
 
-नो मोचयस्यथ यदि स्मरणातिरेकात्
-
-त्वं सर्वदेववरपूजितपादपद्म
-
-\twolineshloka
+\fourlineindentedshloka
+{नो मोचयस्यथ यदि स्मरणातिरेकात्}
+{त्वं सर्वदेववरपूजितपादपद्म}
 {लोको भवन्तमिदमुल्लसितोऽहसिष्य -}
 {त्तस्माद्विलम्बमिह माचर मोचयाशु}% १७
 
@@ -16209,11 +16139,9 @@
 {ततो मोचयिता भ्राता शत्रुघ्नो लीलया हठात्}
 {शरासनविनिर्मुक्त वत्सदन्तकृतव्यथात्}% १६
 
-ये क्षत्रियाः क्षत्रियकन्यकायां
-
-जाताश्च सत्क्षेत्रकुलेषु सत्सु
-
-\twolineshloka
+\fourlineindentedshloka
+{ये क्षत्रियाः क्षत्रियकन्यकायां}
+{जाताश्च सत्क्षेत्रकुलेषु सत्सु}
 {गृह्णन्तु ते तद्विपरीतदेहा}
 {नमन्तु राज्यं रघवे निवेद्य}% १७
 
@@ -16549,11 +16477,9 @@
 {खेलन्ती स्वामिना सार्धं द्यूतेन सुमनोहरा}
 {उवाच वाक्यं मधुरं नर्तयन्तीव कङ्कणे}% ५९
 
-जितं मया कान्त जवेन सर्वं
-
-करिष्यसि त्वं किमु हारिमानसः
-
-\twolineshloka
+\fourlineindentedshloka
+{जितं मया कान्त जवेन सर्वं}
+{करिष्यसि त्वं किमु हारिमानसः}
 {इत्यादि वाक्यं परिहासपूर्वकं}
 {कृत्वा स्वकान्तं परिषस्वजे मुदा}% ६०
 
@@ -17053,27 +16979,21 @@
 {रघुनाथ इति ख्यातिं गमिष्यति महामनाः}
 {तेषामनन्तनामानि रामस्य बलिनः सखि}% ३४
 
-पद्मकोश इव शोभनं मुखं
-
-पङ्कजाभनयने सुदीर्घके
-
-\twolineshloka
+\fourlineindentedshloka
+{पद्मकोश इव शोभनं मुखं}
+{पङ्कजाभनयने सुदीर्घके}
 {उन्नता पृथुमनोहरा नसा}
 {वल्गुसङ्गत मनोहरे भ्रुवौ}% ३५
 
-जानुलम्बित मनोहरौ भुजौ
-
-कम्बुशोभिगलकोऽतिह्रस्वकः
-
-\twolineshloka
+\fourlineindentedshloka
+{जानुलम्बित मनोहरौ भुजौ}
+{कम्बुशोभिगलकोऽतिह्रस्वकः}
 {सत्कपाटतलविस्तृतश्रिकं}
 {वक्ष एतदमलं सलक्ष्मकम्}% ३६
 
-शोभनोरुकटिशोभया युतं
-
-जानुयुग्मममलं स्वसेवितम्
-
-\twolineshloka
+\fourlineindentedshloka
+{शोभनोरुकटिशोभया युतं}
+{जानुयुग्मममलं स्वसेवितम्}
 {पादपद्ममखिलैर्निजैः सदा}
 {सेवितं रघुपतिं सुशोभनम्}% ३७
 
